--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
+    "@emailjs/browser": "^3.10.0",
     "antd": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
