--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
-    "server": "json-server --watch db.json --port 3001"
+    "server1": "json-server --watch db.json --port 3001 ",
+    "server2": "json-server --watch db_seats.json --port 3002 "
   },
   "author": "",
   "license": "ISC",
